--- a/index.html
+++ b/index.html
@@ -8,19 +8,12 @@
 </head>
 <body>
     
-<button>Press Me</button>
-    
     <script>
-
-        const button = document.querySelector('button');
-
-        function greet() {
-            const name = prompt('What is your name?');
-            alert(`Hello ${name}, nice to meet you!`);
-        }
-
-        button.addEventListener('click', greet);
-
+        // conditional statements 
+        // - if : to specify block of code to executed if same condition is true 
+        // - else : specify block of code to be executed if same condiiton is false
+        // - else if : to specify a new condition to test, if the first condition is false
+        // - switch : to specify many alternative blocks of code to be executed.
 
     </script>
 </body>
