example.if.statement

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 <body>
     
     <script>
-        // conditional statements 
-        // - if : to specify block of code to executed if same condition is true 
-        // - else : specify block of code to be executed if same condiiton is false
-        // - else if : to specify a new condition to test, if the first condition is false
-        // - switch : to specify many alternative blocks of code to be executed.
+        if (hour < 18) {
+            greeting = "Good day";
+            
+        }
 
     </script>
 </body>
