if.else.example

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script>
         if (hour < 18) {
             greeting = "Good day";
+
+        } else {
+            greeting = "Good evening";
             
         }
 
